--- a/src/app/pages/scenario/timetable/timetable.page.html
+++ b/src/app/pages/scenario/timetable/timetable.page.html
@@ -16,12 +16,13 @@
         </ion-button>
       </ng-container>
       <ng-container *ngIf="event.role=='student'">
-        <!-- A cada minuto le representan (Ancho Progress Bar / Duración total) píxeles -> left = (MinutoEvento)*(Ancho Progress Bar / Duración total)-->
+        <!-- Each minute is represented by (Progress bar width / Total duration) pixels -> left = (EventMinute)*(Progress Bar Width / Total Duration)-->
         <ion-button class="event-button" (click)="highlightSelectedEvent(i)" color="dark" shape="round" size="small" fill="clear" [ngStyle]="{'position': 'absolute', 'z-index': '1', 'margin-top': scenario.timetableHeight-43 + 'px', 'left': event.elapsedClassTime*((scenario.cssTotalWidth-5)/scenario.activitiesDuration) + 'px'}">
           <ion-icon name="hand-left-outline"></ion-icon>
         </ion-button>      
       </ng-container>
     </ng-container>
+    <!-- Action buttons-->
     <ion-buttons>
       <ion-button title="Pause/unpause class session" class="pause-stop-buttons" [ngStyle]="{'margin-top': scenario.timetableHeight-15 + 'px', 'margin-left': 429 + 'px'}" (click)="pauseUnpauseLive()" fill="solid" shape="round" *ngIf="role=='teacher' && runningStatus==1 && paused==false">
         <ion-icon name="pause-outline"></ion-icon>
@@ -289,13 +290,23 @@
       <span class="text-with-icon"> {{scenario.teacherName}} <b>(TEACHER)</b> </span>
     </ion-label>
   </ion-item>
-  <ion-item *ngFor="let student of studentCheckboxList">
-    <ion-avatar slot="start">
-      <ion-icon style="font-size:28px;padding-top: 5px;" name="person-outline"></ion-icon>
-    </ion-avatar>
-    <ion-label><span class="text-with-icon"> {{student.student_name}} </span></ion-label>
-    <ion-checkbox *ngIf="role=='teacher'" slot="end" [(ngModel)]="student.selected"></ion-checkbox>
-  </ion-item>
+  <ng-container *ngIf="runningStatus!=1">
+    <ion-item *ngFor="let student of studentList">
+      <ion-avatar slot="start">
+        <ion-icon style="font-size:28px;padding-top: 5px;" name="person-outline"></ion-icon>
+      </ion-avatar>
+      <ion-label><span class="text-with-icon"> {{student.student_name}} </span></ion-label>
+    </ion-item>
+  </ng-container>
+  <ng-container *ngIf="runningStatus==1">
+    <ion-item *ngFor="let student of studentCheckboxList">
+      <ion-avatar slot="start">
+        <ion-icon style="font-size:28px;padding-top: 5px;" name="person-outline"></ion-icon>
+      </ion-avatar>
+      <ion-label><span class="text-with-icon"> {{student.student_name}} </span></ion-label>
+      <ion-checkbox *ngIf="role=='teacher'" slot="end" [(ngModel)]="student.selected"></ion-checkbox>
+    </ion-item>
+  </ng-container>
 </ion-list> 
 
 <ng-template #noActivity>
